colcon_ws/log/build_2022-09-13_03-57-48/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:134:5: error: expected unqualified-id before ‘while’
  134 |     while (true) {
      |     ^~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:152:5: error: expected unqualified-id before ‘while’
  152 |     while (true) {
      |     ^~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:169:5: error: ‘traj_pub_’ does not name a type
  169 |     traj_pub_ -> publish(msg);
      |     ^~~~~~~~~
In file included from /opt/ros/foxy/include/rclcpp/service.hpp:34,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:5:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:170:5: error: expected unqualified-id before ‘do’
  170 |     RCLCPP_INFO(this->get_logger(), "PUBLISHED");
      |     ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:170:5: error: expected unqualified-id before ‘while’
  170 |     RCLCPP_INFO(this->get_logger(), "PUBLISHED");
      |     ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:196:4: error: expected ‘;’ after class definition
  196 |   }
      |    ^
      |    ;
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In constructor ‘NominalController::NominalController()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:47:39: error: ‘timer_callback’ is not a member of ‘NominalController’
   47 |         std::bind(&NominalController::timer_callback, this));
      |                                       ^~~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::publish_one_trajectory()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:116:5: warning: this ‘while’ clause does not guard... [-Wmisleading-indentation]
  116 |     while (true);
      |     ^~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:117:6: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  117 |      double th =  2.0 * M_PI * t / T;
      |      ^~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:130:18: error: break statement not within loop or switch
  130 |       if (t > T) break;
      |                  ^~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:107:9: warning: unused variable ‘N’ [-Wunused-variable]
  107 |     int N = (T / dt);
      |         ^
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:113:12: warning: unused variable ‘R’ [-Wunused-variable]
  113 |     double R = 0.5;
      |            ^
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In function ‘void joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:198:60: warning: unused parameter ‘msg’ [-Wunused-parameter]
  198 |   void joy_callback(const sensor_msgs::msg::Joy::SharedPtr msg){
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In function ‘void timer_callback()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:249:4: error: ‘publish_one_trajectory’ was not declared in this scope
  249 |    publish_one_trajectory();
      |    ^~~~~~~~~~~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:256:24: error: ‘last_tf_stamp’ was not declared in this scope
  256 |     msg.header.stamp = last_tf_stamp;
      |                        ^~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:260:22: error: ‘last_x’ was not declared in this scope
  260 |     msg.xs.push_back(last_x);
      |                      ^~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:261:22: error: ‘last_y’ was not declared in this scope
  261 |     msg.ys.push_back(last_y);
      |                      ^~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:262:22: error: ‘last_z’ was not declared in this scope
  262 |     msg.zs.push_back(last_z);
      |                      ^~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:263:24: error: ‘last_yaw’ was not declared in this scope
  263 |     msg.yaws.push_back(last_yaw);
      |                        ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:269:22: error: ‘target_x’ was not declared in this scope
  269 |     msg.xs.push_back(target_x);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:270:22: error: ‘target_y’ was not declared in this scope
  270 |     msg.ys.push_back(target_y);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:271:22: error: ‘target_z’ was not declared in this scope
  271 |     msg.zs.push_back(target_z);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:272:24: error: ‘target_yaw’ was not declared in this scope
  272 |     msg.yaws.push_back(target_yaw);
      |                        ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:308:5: error: ‘traj_pub_’ was not declared in this scope
  308 |     traj_pub_ -> publish(msg);
      |     ^~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: At global scope:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:311:1: error: expected declaration before ‘}’ token
  311 | }; // class NominalController
      | ^
make[2]: *** [CMakeFiles/nominal_controller.dir/build.make:63: CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/nominal_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
